--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Typing Game" />
     <meta property="og:type" content="typing.game" />
     <meta property="og:url" content="https://youthful-colden-e5af7f.netlify.app/" />
-    <meta property="og:image" content="%PUBLIC_URL%/GitHubSearch.jpg" />
+    <meta property="og:image" content="https://youthful-colden-e5af7f.netlify.app/GitHubSearch.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
